--- a/projects.org
+++ b/projects.org
@@ -23,7 +23,7 @@ For some time years ago, I used an excellent mobile app called /Timeful/ that di
 
 [fn:1] David Allen's very popular productivity praxis known as [[https://gettingthingsdone.com/][/Getting Things Done/]].
 [fn:2] See Dave Crenshaw's video [[https://www.lynda.com/Business-Software-tutorials/Replace-do-lists-schedule/440668/489450-4.html][/Replace to-do lists with a schedule/]], on Lynda.com. In my /Emacs Org mode/ set-up, my agenda shows undated TODO items under a headline that says "Unscheduled:". So I am encouraged to schedule everything. As Crenshaw argues, it's worth managing your time budget and learning to estimate effort.
-[fn:3] Unfortunately, /Timeful/ was /acquihired/ by Google and the app was quickly discontinued with the promise that its functionality would be ported over to Google apps. What I most valued was how the interface allowed you to drag tasks onto a time grid to schedule them. It could also minimize calendar events, so that they wouldn't affect your planning if they don't actually require your attention.
+[fn:3] Unfortunately, /Timeful/ was /acquihired/ by Google and the app was quickly discontinued with the promise that the team would work on features for Google apps. It was a great mobile app. Among my favorite features were that the interface allowed you to drag tasks off a list onto a time grid to schedule them. It could also minimize calendar events, so that they wouldn't affect your planning if they don't actually require your attention. Supposedly, what Google was interested in was its ability to suggest times for you to complete your tasks, something I was never interested in.
 *** remind
 Project page: [[https://github.com/tgdnt/remind][github.com/tgdnt/remind]] 
 
