--- a/spaceteam.org
+++ b/spaceteam.org
@@ -11,12 +11,21 @@ game of cooperative shouting with lots of words in it.
 
 I am credited only in the app itself when you change the
 language to Brazilian Portuguese. I would recommend installing
-the game any way, but I have included a screenshot here so you
-don't have to.
+the game any way, but I have included a screenshot at the
+bottom of this page so you don't have to.
+
+In addition to the interface itself, localizing Spaceteam deals
+with a considerable database of words that are randomly strung
+together and need to make sense.
+
+Words are classed as before-noun and after-noun adjectives,
+verbs, and more. There is also a small set of predetermined
+strings that could not be combined with random words.
+
+Thanks for stopping by!
 
 #+BEGIN_HTML
 <picture>
     <img src="../assets/images/spaceteam-credit.jpg" />
 </picture>
 #+END_HTML
-
